pgbouncer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer-service
  namespace: database
  labels:
    app: pgbouncer
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 6432
  selector:
    app: pgbouncer
