pgbouncer/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgbouncer-network-policy
  namespace: database
spec:
  podSelector:
    matchLabels:
      app: pgbouncer
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: database
        podSelector:
          matchLabels:
            app: database
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: apps
        podSelector:
          matchLabels:
            app: issueboard
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: apps
        podSelector:
          matchLabels:
            app: simple-chat
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: database
        podSelector:
          matchLabels:
            app: database
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: apps
        podSelector:
          matchLabels:
            app: issueboard
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: apps
        podSelector:
          matchLabels:
            app: simple-chat
